Fixed notification mobile distacne

--- a/styles.css
+++ b/styles.css
@@ -381,7 +381,7 @@ uppercase {
 
     .notification {
         font-size: 12pt;
-        bottom: 50pt;
+        /* bottom: 50pt; */
     }
 
     .col-1-container {
